--- a/Final Project/finalproject.css
+++ b/Final Project/finalproject.css
@@ -1,5 +1,3 @@
-/* f.tenorio June 2017 */
-
 * {
     margin: 0px;
     padding: 0px;
@@ -98,6 +96,14 @@ section {
             font-size: 102px;
             margin-top: 50px;
         }
+        
+        .blink_on {
+            background-color: mistyrose;
+        }
+        
+        .blink_off {
+            background-color:none;
+        }
     
     #timer_toggle .disabled, #timer_toggle .enabled  {
         width: 164px;
@@ -122,7 +128,7 @@ section {
             text-align: center;
             width: 125px;
         }
-
+        
         #error_log {
             color: firebrick; 
             margin: 13px 0px;
