--- a/Final Project/finalproject.css
+++ b/Final Project/finalproject.css
@@ -98,7 +98,7 @@ section {
         }
         
         .blink_on {
-            background-color: mistyrose;
+            background-color: lightcoral;
         }
         
         .blink_off {
